src/Pages/personalBanking/accounts/accounts.css
.listofAccounts {
    list-style: none;
    padding: 0;    
    margin: 0;    
    width: auto;    
    width: auto;    
    height: auto;
    padding-top: 50px;
    display: flex;
}
.seniorAccountCreation h1 {
    font-size: 25px !important;

    font-family: Arial,Helvetica,sans-serif;

    font-weight: initial;

    color:
    #ef7c00;

    margin: .67em 0;
}
.accCreation {
    position: absolute;

    top: 280px;
    
    left: 575px;
}
.buttons {
    display: flex;
    left: 546px;
    position: absolute;
}
.seniorAccountCreation h3 {
    font-size: 18px;

    font-family: Arial,Helvetica,sans-serif;
    
    font-weight: initial;
    
    color:
    #ef7c00;
    
    margin: 1em 0; 
}
.AccountsContainer {
    padding: 0;

    border-bottom: 1px solid #e0e6eb;

    margin-bottom: -30px;
}
.Accounts {
    flex-direction: column;
    padding: 0;
    
    margin: 0;
    
    float: none;
    
    position: static;
}
.detailsSenior {
    position: absolute;
    left: 239px;
    top: 26px;
}
.seniorForm input[type=text] {
    width: 400px;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    position: absolute;
    left:200px;
}

.seniorForm {
    text-align: left;
    display: flex;
    flex-direction: column;
    padding-left:20px;
}
.seniorFields {
    display: flex;
}
.benifitsSenior {
    text-align: left;
    width:100%;
}

.seniorForm .seniorsubmit {
    width: 160px;
}
.AccountImage {
    max-width: 1300px;
    width: 100% !important;
    top: 17px;
    position: relative;
}

